--- a/index.html
+++ b/index.html
@@ -123,9 +123,15 @@
       	boxAudioElement.pause();
       	boxVisible = false;
     	} else {
-      	boxElement.style.display = "block";
-      	boxAudioElement.play();
       	boxVisible = true;
+      	if (tally >= 69) {
+        tally = 69;
+        tallyElement.innerHTML = `Fucks given to Linus: ${tally}/69`;
+        boxElement.style.display = "block";
+        if (boxAudioElement.paused) {
+        boxAudioElement.play();
+        }
+      	}
     	}
   	}
 	});
