--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
+      .box h1 {
+        max-width: 100%;
+  	max-height: 100%;
+	}
+
+      .box img {
+  	max-width: 100%;
+  	max-height: 100%;
+      }
+
       body {
         overflow: hidden;
         background-color: black;
