--- a/index.html
+++ b/index.html
@@ -25,16 +25,21 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
+      .box * {
+  	width: auto;
+  	height: auto;
+  	margin: 0;
+  	padding: 0;
+  	position: static;
+      }
       .box h1 {
         max-width: 100%;
   	max-height: 100%;
-	}
-
+      }
       .box img {
   	max-width: 100%;
   	max-height: 100%;
       }
-
       body {
         overflow: hidden;
         background-color: black;
