--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
   	position: static;
       }
       .box h1 {
-        max-width: 100%;
-  	max-height: 100%;
-      }
-      .box img {
-  	max-width: 100%;
-  	max-height: 100%;
+        text-align: center;
       }
       body {
         overflow: hidden;
