--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       .box h1 {
         text-align: center;
       }
+      .box img {
+  	width: 80%;
+  	height: 80%;
+      }
       body {
         overflow: hidden;
         background-color: black;
