--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       .box h1 {
         text-align: center;
       }
+      .box img {
+    	max-width: 50%;
+    	max-height: 50%;
+      }
       body {
         overflow: hidden;
         background-color: black;
