--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         border: calc(0.5vw) solid rgb(16, 16, 16);
         border-radius: 10px;
         position: absolute;
-        top: 50%;
-        left: 50%;
+        top: 75%;
+        left: 75%;
         transform: translate(-50%, -50%);
       }
       .box * {
@@ -75,7 +75,7 @@
       </div>
       <div id="message">
         Wish to fuck him more?
-        <button onclick="location.reload()">Refresh</button>
+        <button onclick="location.reload()">MORE!</button>
       </div>
     </div>
 
